# halos-startup

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  ai_orchestrator.py  bot.py  bot_webhook.py  docker-compose.yml  fix_encoding.py  fix_encoding2.py  fix_text.py  fix_text_handler.py  pyproject.toml  quick_ai.py  render.yaml  requirements.txt  setup_payme.py  test_admin_callbacks.py  test_all_payments.py  test_bot.py  test_discount.py  test_kotib.py  test_payme.py  test_stt.py  webhook_server.py
api/: __init__.py  auth.py  config.py  database.py  main.py  models.py  telegram_auth_addition.py
api/routers/: __init__.py  admin.py  analytics.py  auth.py  budgets.py  debts.py  sync.py  transactions.py  users.py
app/: Untitled-1.txt  __init__.py  ai_assistant.py  app_login_handler.py  atmos_handlers.py  atmos_payment.py  click_payment.py  click_webhook.py  config.py  database.py  engine.py  gemini_ai.py  handlers.py  languages.py  marketing.py  myuzcard_payment.py  p2p_payment.py  payme_api.py  payme_payment.py  payment_notifications.py  payment_webhook.py  pdf_parser.py  pro_features.py  report_images.py  savings_handlers.py  scheduler.py  self_learning_ai.py  subscription.py  subscription_handlers.py  telegram_payments.py  transaction_parser.py  user_engagement.py
data/: README.md  learned_patterns.json
data/transactions/: 7152317007_12.2025.xlsx  7152317007_be0f7b9ae206fefced81b181944f4c616daed64b.xlsx  7152317007_cf6d22b8e0f81d75c831ce21ba41f37c5daf58b2.xlsx  (+1 more)
docs/: MARKETING_STRATEGY.md  UX_PRODUCT_ANALYSIS.md
tests/: test_database.py  test_engine.py
(+5 files in other folders)
