[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solvo-bot"
version = "1.0.0"
description = "SOLVO - Debt Freedom & Wealth Building Telegram Bot"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SOLVO Team"}
]
dependencies = [
    "python-telegram-bot>=20.7",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
